--- a/contactus.html.html
+++ b/contactus.html.html
@@ -1,13 +1,14 @@
+
 <!DOCTYPE html>
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Contact Us</title>
 
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css" integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous">
+<script src="https://kit.fontawesome.com/ed84f91a43.js" crossorigin="anonymous"></script>
 
-<link rel="stylesheet" href="/css/all.min.css">
-<link rel="stylesheet" href="/css/style.css" />
+<link rel="stylesheet" type="text/css" href="style.css">
+
 </head>
 <body>
 	<section class="contact">
@@ -39,32 +40,22 @@
                 </div>
                 </div>
                 </div>
-                </div>
- 	</section>
-                </body>
-                </html>	
-
-
-<p>We are happy to introduce enterprenership to eradicate poverty from the world!</p>
-</div>
-</div>
-</div>
-	<div class="conatctForm">
-	<form>
+                <div class="contactForm">  
+                <form>
 	<h2>Send Message</h2>
-	<div class="inputBox">
+                <div class="inputBox">
 	<input type="text" name="" required="required">
-	<span> Full Name</span>
+	<span>Full Name</span>
 	</div>
-	<div class="inputBox">
-	<input type="text" name=""required="required">
+<div class="inputBox">
+	<input type="text" name="" required="required">
 	<span>Email</span>
 	</div>
 <div class="inputBox">
 <textarea requiered="required"></textarea>
-<span>Type your Message</span>
+<span>Type your Message.. </span>
 </div>
-<div class="InputBox">
+<div class="inputBox">
 <input type="submit" name="" value="Send">
 </div>
 	</form>
@@ -73,3 +64,12 @@
 	</section>
 	</body>
 	</html>
+
+
+
+
+
+
+	
+
+	
