--- a/home.html
+++ b/home.html
@@ -2,10 +2,31 @@
     <head>
         <meta name="viewport" content="width=device-width, intial-scale=1.0">
         <link rel="stylesheet" href="css/home.css">
-        <tite>home</tite>
+        <title>home</title>
     </head>
     <body>
         <div class="header">
+            <nav>
+                <div class="logo">
+                    <img src="images/no pverty.jpg" height="70" width="100">
+                    
+                </div>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Mindset</a></li>
+                    <li><a href="#">Enterpronurship</a></li>
+                    <li><a href="#">Contact-Us</a></li>
+                    <li><a href="#">Donation</a></li>
+                    <li><a href="#">Sign in</a></li>
+                </ul>
+            </nav>
+
+            <div class="content">
+                <h1 class="slide-left">POVERTY</h1>
+                <p class="slide-left">There are lots of people(arround 10%) in the the world extremly poverty today, Struggling to fulfill the most basic needs like health, education, and access water and sanatization and ect.<br>8% 0f <b>employeed workers</b> and their families worldwild lives in extreamly poverty </p>
+
+            </div>
             
         </div>
 
