--- a/01contstcus.html
+++ b/01contstcus.html
@@ -1,10 +1,63 @@
+
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Registration</title>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Registration</title>
   </head>
-  <body style="background-color:#00FFFF;">
-    <h1>Contact Us Details</h1>
-    <p>Some paragraph for example.</p>
-  </body>
-</html>
+<body style="background-color:#00FFFF;">
+<script src="https://kit.fontawesome.com/ed84f91a43.js" crossorigin="anonymous"></script>
+
+<link rel="stylesheet" type="text/css" href="style.css">
+
+</head>
+<body>
+	<section class="contact">
+	<div class="content">
+	<h2>Contact Us</h2>
+	<p>No Poverty With Digital Entrepreneurship</p>
+	</div>
+	<div class="container">
+	<div class="contactInfo">
+	<div class="box">
+	<div class="icon"><i class="fa-solid fa-location-dot"></i></i></div>
+	<div class="text">
+	<h3>Address</h3>
+                <p>4671 Sugar Camp Road,<br>Owatonna, Minnesota,<br>55060</p>
+                 <img src="C:\Users\g.k.i.j.kapuge\Downloads\r.jpg"alt="map"height="200" width="200">
+
+</div>
+                </div>
+                <div class="box">
+                <div class="icon"><i class="fas fa-phone-alt"></i></div>
+                <div class="text">
+                <h3>Phone</h3>
+                <p>507-475-6094</p>
+                </div>
+                </div>
+                <div class="box">
+                <div class="icon"><i class="fas fa-envelope"></i></div>
+                <div class="text">   
+                <h3>Email</h3>
+	<p>wrub7d78i0e@temporary-mail.net</p>
+                </div>
+                </div>
+                </div>
+                <div class="contactForm">  
+                <form>
+	
+	</form>
+	</div>
+	</div>
+	</section>
+	</body>
+	</html>
+
+
+
+
+
+
+	
+
+	
