--- a/01contstcus.html
+++ b/01contstcus.html
@@ -14,8 +14,8 @@
 <body>
 	<section class="contact">
 	<div class="content">
-	<h2>Contact Us</h2>
-	<p>No Poverty With Digital Entrepreneurship</p>
+	<h2><b>Contact Us</b></h2>
+	<p style="color:white"><b>No Poverty With Digital Entrepreneurship</b></p>
 	</div>
 	<div class="container">
 	<div class="contactInfo">
