--- a/01contstcus.html
+++ b/01contstcus.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Registration</title>
   </head>
-<body style="background-color:#00FFFF;">
+<body style="background-color: #74D5DD;">
 <script src="https://kit.fontawesome.com/ed84f91a43.js" crossorigin="anonymous"></script>
 
 <link rel="stylesheet" type="text/css" href="style.css">
@@ -15,7 +15,7 @@
 	<section class="contact">
 	<div class="content">
 	<h2><b>Contact Us</b></h2>
-	<p style="color:white"><b>No Poverty With Digital Entrepreneurship</b></p>
+	<p style="color:#F5DEB3"><b>No Poverty With Digital Entrepreneurship</b></p>
 	</div>
 	<div class="container">
 	<div class="contactInfo">
