--- a/01contstcus.html
+++ b/01contstcus.html
@@ -14,7 +14,7 @@
 <body>
 	<section class="contact">
 	<div class="content">
-	<h2><b><p style ="color:#98b4d4">Contact Us</b></h2>
+	<h2><b>Contact Us</b></h2>
 	<p style="color:#F5DEB3"><b>No Poverty With Digital Entrepreneurship</b></p>
 	</div>
 	<div class="container">
