--- a/01contstcus.html
+++ b/01contstcus.html
@@ -22,7 +22,7 @@
 	<div class="box">
 	<div class="icon"><i class="fa-solid fa-location-dot"></i></i></div>
 	<div class="text">
-	<h3>Address</h3>
+	<h3><p style="color:#F5DEB3">Address</h3>
                 <p>4671 Sugar Camp Road,<br>Owatonna, Minnesota,<br>55060</p>
                  <img src="C:\Users\g.k.i.j.kapuge\Downloads\r.jpg"alt="map"height="200" width="200">
 
@@ -31,14 +31,14 @@
                 <div class="box">
                 <div class="icon"><i class="fas fa-phone-alt"></i></div>
                 <div class="text">
-                <h3>Phone</h3>
+                <h3><p style="color:#F5DEB3">Phone</h3>
                 <p>507-475-6094</p>
                 </div>
                 </div>
                 <div class="box">
                 <div class="icon"><i class="fas fa-envelope"></i></div>
                 <div class="text">   
-                <h3>Email</h3>
+                <h3><p style="color:#F5DEB3">Email</h3>
 	<p>wrub7d78i0e@temporary-mail.net</p>
                 </div>
                 </div>
