--- a/01contstcus.html
+++ b/01contstcus.html
@@ -6,7 +6,8 @@
 <title>Registration</title>
   </head>
 <body style="background-color: #74D5DD;">
-<script src="https://kit.fontawesome.com/ed84f91a43.js" crossorigin="anonymous"></script>
+<script src="https://kit.fontawesome.com/ed84f91a43.js" crossorigin="anonymous"><P STYLE ="color
+:#A908B5"></script>
 
 <link rel="stylesheet" type="text/css" href="style.css">
 
@@ -24,7 +25,7 @@
 	<div class="text">
 	<h3><p style="color:#F5DEB3">Address</h3>
                 <p>4671 Sugar Camp Road,<br>Owatonna, Minnesota,<br>55060</p>
-                 <img src="C:\Users\g.k.i.j.kapuge\Downloads\r.jpg"alt="map"height="200" width="200">
+                 <img src="C:\Users\g.k.i.j.kapuge\Downloads\r.jpg"alt="map"height="300" width="300">
 
 </div>
                 </div>
