--- a/01contstcus.html
+++ b/01contstcus.html
@@ -15,8 +15,8 @@
 <body>
 	<section class="contact">
 	<div class="content">
-	<h2><b>Contact Us</b></h2>
-	<p style="color:#F5DEB3"><b>No Poverty With Digital Entrepreneurship</b></p>
+	<h2><b><center>Contact Us</center></b></h2>
+	<b>No Poverty With Digital Entrepreneurship</b>
 	</div>
 	<div class="container">
 	<div class="contactInfo">
