--- a/01contstcus.html
+++ b/01contstcus.html
@@ -21,7 +21,7 @@
 	<div class="container">
 	<div class="contactInfo">
 	<div class="box">
-	<div class="icon"><i class="fa-solid fa-location-dot"></i></i></div>
+	<div class="icon"><p style="color:#A908B5"><i class="fa-solid fa-location-dot"></i></i></div>
 	<div class="text">
 	<h3><p style="color:#F5DEB3">Address</h3>
                 <p>4671 Sugar Camp Road,<br>Owatonna, Minnesota,<br>55060</p>
@@ -30,14 +30,14 @@
 </div>
                 </div>
                 <div class="box">
-                <div class="icon"><i class="fas fa-phone-alt"></i></div>
+                <div class="icon"><p style="color:#A908B5"><i class="fas fa-phone-alt"></i></div>
                 <div class="text">
                 <h3><p style="color:#F5DEB3">Phone</h3>
                 <p>507-475-6094</p>
                 </div>
                 </div>
                 <div class="box">
-                <div class="icon"><i class="fas fa-envelope"></i></div>
+                <div class="icon"><p style="color:#A908B5"><i class="fas fa-envelope"></i></div>
                 <div class="text">   
                 <h3><p style="color:#F5DEB3">Email</h3>
 	<p>wrub7d78i0e@temporary-mail.net</p>
