--- a/01contstcus.html
+++ b/01contstcus.html
@@ -15,7 +15,7 @@
 <body>
 	<section class="contact">
 	<div class="content">
-	<h2><b><center>Contact Us</center></b></h2>
+	<h2><b><center><p style="color:#A908B5">Contact Us</center></b></h2>
 	<b>No Poverty With Digital Entrepreneurship</b>
 	</div>
 	<div class="container">
