--- a/01contstcus.html
+++ b/01contstcus.html
@@ -15,6 +15,7 @@
 <body>
 	<section class="contact">
 	<div class="content">
+	<img src="C:\Users\g.k.i.j.kapuge\Desktop\web poverty\No_Poverty_with_Digital_Enterpronurship\logo.JPEG"alt="logo" height "200" width="200">
 	<h2><b><center><p style="color:#A908B5">Contact Us</center></b></h2>
 	<b>No Poverty With Digital Entrepreneurship</b>
 	</div>
@@ -25,7 +26,7 @@
 	<div class="text">
 	<h3><p style="color:#F5DEB3">Address</h3>
                 <p>4671 Sugar Camp Road,<br>Owatonna, Minnesota,<br>55060</p>
-                 <img src="C:\Users\g.k.i.j.kapuge\Downloads\r.jpg"alt="map"height="300" width="300">
+                 <img src="C:\Users\g.k.i.j.kapuge\Downloads\r.jpg"alt="map"height="400" width="400">
 
 </div>
                 </div>
