--- a/01contstcus.html
+++ b/01contstcus.html
@@ -25,8 +25,8 @@
 	<div class="icon"><p style="color:#A908B5"><i class="fa-solid fa-location-dot"></i></i></div>
 	<div class="text">
 	<h3><p style="color:#F5DEB3">Address</h3>
-                <p>4671 Sugar Camp Road,<br>Owatonna, Minnesota,<br>55060</p>
-                 <img src="C:\Users\g.k.i.j.kapuge\Downloads\r.jpg"alt="map"height="400" width="400">
+                <p><font size:40px>4671 Sugar Camp Road,<br>Owatonna, Minnesota,<br>55060</p>
+  </font>               <img src="C:\Users\g.k.i.j.kapuge\Downloads\r.jpg"alt="map"height="400" width="400">
 
 </div>
                 </div>
