Added Importance of mindset part to home page

--- a/home.html
+++ b/home.html
@@ -31,12 +31,21 @@
                 <p class="slide-left">There are lots of people(arround 10%) in the the world extremly poverty today, Struggling to fulfill the most basic needs like health, education, and access water and sanatization and ect.<br>8% of <b>employeed workers</b> and their families worldwild lives in extreamly poverty </p>
             </div>
             </div>
-            </div>
             <div class="content2">
                 <h2>Why Important Enterpronurship ?..</h2>
                 <p>A large number of new jobs and opportunities are created by entrepreneurship. Entrepreneurship creates a huge amount of entry-level jobs that are very much important to turn unskilled jobholders into skilled ones. It also prepares and provides experienced workers to large industries. The increase in the total employment of a country largely depends on the rise of entrepreneurship. So the role of entrepreneurship in creating new job opportunities is huge. <br>By bringing innovation to every aspect of businesses, entrepreneurial ventures enhance production utilizing the existing resources in the most effective ways. Entrepreneurs develop new markets by introducing new and improved products, services, and technology. Thus, they help generate new wealth and add more to the national income. So the government can offer the citizens more national benefits. </p>
 
             </div>
+            <div class="content3">
+                <h2>Why Important Mindset..</h2>
+                <p>Mindset may be one of the most important things for entrepreneurs. As an entrepreneur you face lots of challenges, probably a fair share of failures. You have to make a lot of decisions in a variety of areas that you both stand behind and know when to admit you were wrong. You need to be able to ask for help and sometimes accept advice that you don’t necessarily like. All of these things take a certain mindset. On top of that, you need to be able to take lots of calculated risks and still sleep well at night. That may be the most important mindset.</p>
+                <p>The mindset is like the operating system of a computer. Whether your programs and skill work has no bearing - it is about the SETTING of MIND.
+It is about a major discovery that NO ONE TELLS YOU. Think about humans … we live on the planet earth, but it is only until 1500 that people realized that the earth is not the center of universe. This is the mindset. This REALIZATION changes everything.
+                </p>
+
+            </div>
+            </div>
+           
 
     </body>
 </html>
