--- a/1.html
+++ b/1.html
@@ -7,5 +7,5 @@
 	<title>Gallery Page</title>
 </head>
 <body>
-<center><h1><b><font color:green>Previous activities done by our organiztion</b></center></h1></body>
+<center><h1><b><p style="color:#90EE90">Previous activities done by our organiztion</b></center></h1></body>
 </html>
