--- a/1.html
+++ b/1.html
@@ -7,5 +7,8 @@
 	<title>Gallery Page</title>
 </head>
 <body>
-<center><h1><b><p style="color:#90EE90">Previous activities done by our organiztion</b></center></h1></body>
+<center><h1><b><p style="color:#90EE90">Previous activities done by our organiztion</b></center></h1>
+<img src="C:\Users\g.k.i.j.kapuge\Desktop\web poverty\No_Poverty_with_Digital_Enterpronurship\logo.JPEG"alt="logo" height "150" width="150"style="float: top left;">
+
+</body>
 </html>
