Update ESBI page (add I part)

--- a/ESBI_B page.html
+++ b/ESBI_B page.html
@@ -3,13 +3,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="ESBI_B.css" type="text/css">
 <body>
-<img src="B.jpg" >
+<img class="Bimg" src="B.jpg" >
 
 
 <section class="B" >
   <h1 style="font-size: 60px;">The B </h1>
 
-  <p style="font-size: 30px"><i>Business owner</i></p>
+  <p style="font-size: 30px"><i><b>Business owner</b></i></p>
   <p class="P">This group of people could almost be the opposite of the S. 
 Those who are true B’s like to surround themselves with smart 
 people from all four categories: E, S, B, and I. Unlike the S, 
@@ -27,10 +27,20 @@ and called in some of his bright assistants and asked them to
 give the panel the answers they sought. <br>One of the quotes credited to Ford goes: “Thinking is the 
 hardest work there is. That is why so few people engage in it.”</p>
 
+<img class="Iimg" src="I.jpg">
+
+<section class="I" >
+  <h1 style="font-size: 60px;">The I </h1>
+
+  <p style="font-size: 30px;"><i><b>Investor</b></i></p>
+  <p class="P">
+    Investors make money with money. They don’t have to work 
+because their money is working for them.<br>I quadrant is the playground of the rich. Regardless of which 
+quadrant people make their money in, if they hope someday to 
+be rich, they ultimately must come to the I quadrant. It’s in the 
+I quadrant that money becomes converted to wealth.</p>
 </section>
-
-
-
+  
 </body>
 </html>
 
