--- a/1.html
+++ b/1.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 <center><h1><b><p style="color:#90EE90">Previous activities done by our organiztion</b></center></h1>
-<img src="C:\Users\g.k.i.j.kapuge\Desktop\web poverty\No_Poverty_with_Digital_Enterpronurship\logo.JPEG"alt="logo" height "150" width="150"style="float: top left;">
+<img src="C:\Users\g.k.i.j.kapuge\Desktop\web poverty\No_Poverty_with_Digital_Enterpronurship\logo.JPEG"alt="logo" height "150" width="150"style="float:right;">
+<br>
+<h2><p style="color:#A44CD3">Leadership Trainee programs </h2>
 
 </body>
 </html>
