--- a/css/About us.html
+++ b/css/About us.html
@@ -1,30 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
  <head>
-        <meta charset="UTF-8">
-        <title>About us</title>
-        <link rel="stylesheet" href="style.css">
-        <style>
-            *{
-                padding: 0;
-                margin: 0;
-             }
-             .banner-area{
-                 width: 100%;
-                 height: 100vh;
-                 background: url(../css/img/mena-digital-1200-1617910863.jpg);
-             }
-        </style>
+     <title>About Us</title>
  </head>
  <body>
-     <div class="banner-area">
-         <div class="content-area">
-             <div class="content">
-
-             </div>
-         </div>
-     </div>
+     <div class="background-image"></div>    
  </body>
+ <style>
+     *{
+         margin: 0;
+         padding: 0;
+     }
+     .background-image {
+         background-image: url(../css/img/mena-digital-1200-1617910863.jpg);
+         background-size: cover;
+         background-repeat: no-repeat;
+         height: 100vh;
+     }
+ </style>
    
         
 </html>
