--- a/css/About us.html
+++ b/css/About us.html
@@ -3,7 +3,12 @@
      <title>About Us</title>
  </head>
  <body>
-     <div class="background-image"></div>    
+     <div class="background-image">
+    
+        <h1>About Us</h1>
+        <p>We are a non-profit organization that helps people get rid of their poverty. we have more than 5 years of working experience now. we give more than 2000 plus job opportunities. We give a very good training program. we recognized as a talented young organization within a short period. We spread in 200 + countries.</p>
+        
+      </div>   
  </body>
  <style>
      *{
