--- a/css/About us.html
+++ b/css/About us.html
@@ -17,7 +17,9 @@
                   <div class="mission">
                     
                     <h2>Our mission is to give more job opportunities to any kind of man. Also, destroy poverty and build up a developing society for the future. Finally from us, we create a well-known and experienced person for the job.</h2>
-
+<img src="../css/img/88-880059_vision-png-image-mission-and-vision-clipart-removebg-preview.png" height="300" width="300" display="block" margin="0 auto 0">
+                    <div class="Vision">
+    <h2></h2>
          </div>
                  </div>
         
