--- a/0.html
+++ b/0.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -21,7 +19,6 @@
 <h1>Contact us</h1>
 <div class = "form">
 <form action="insert" method="post">
-<p>Email</p><input type="text" name="email" ><br>
 <p>Name</p><input type="text" name="name" ><br>
 <p>Gender</p><input type="radio" name="gender" value="male">Male
 <input type="radio"name="gender" value="female">Female<br>
@@ -30,10 +27,20 @@
 <select id="city" name="city">
 <option value="kaduwela">Kaduwela</option>
 <option value="kadawatha">Kadawatha</option>
+<option value="Kandy">Kandy</option>
+<option value="Kegalle">Kegalle</option>
+<option value="Katharagama">Katharagama</option>
+<option value="Meerigama"> Meerigama</option>
 </select><br>
 <p>Message</p><input type="text" name="message" ><br><br>
+<p>Email</p><input type="text" name="email" ><br><br><br>
 <input type="submit" name="submit" value="submit"><br><br><br><br>
 </form>
+<form>
+        <input type="text" placeholder=" Clear" />
+  <button type="reset">&times;</button>
+    </form>
+ 
 </div>
 <div class="footer">
 </div>	
