--- a/0.html
+++ b/0.html
@@ -9,7 +9,6 @@
 <img src="C:\Users\g.k.i.j.kapuge\Desktop\web poverty\No_Poverty_with_Digital_Enterpronurship\logo.jpeg" class="logo" width = "100" height = "100">
 <div class="header-right">
 <a href="F:\NSBM\WebLab\login.html">Sign In</a>
-<a class="active" href="">Contact Us</a>
 <a href="F:\NSBM\WebLab\aboutus.html">About Us</a>
 <a href="C:\Users\ACER\Desktop\WebLab\index.html">Home</a>
 </div>
@@ -34,14 +33,13 @@
 </select><br>
 <p>Message</p><input type="text" name="message" ><br><br>
 <p>Email</p><input type="text" name="email" ><br><br><br>
+<p>Date of Birth:<input type="text" name="Address"size="30"</p>
 <input type="submit" name="submit" value="submit"><br><br><br><br>
 </form>
 <form>
         <input type="text" placeholder=" Clear" />
   <button type="reset">&times;</button>
     </form>
- 
-</div>
 <div class="footer">
 </div>	
 </body>
