--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
                     <li><a href="#">Mindset</a></li>
                     <li><a href="#">Enterpronurship</a></li>
                     <li><a href="#">Contact-Us</a></li>
-                    <li><a href="#">Donation</a></li>
+                    <li><a href="#">Galary</a></li>
                     <li><a href="#">Sign in</a></li>
                 </ul>
             </nav>
