--- a/01contactus.html
+++ b/01contactus.html
@@ -27,10 +27,9 @@
 	<div class="text">
 	<h3><p style="color:#F5DEB3">Address</h3>
                 <p><font size:40px>4671 Sugar Camp Road,<br>Owatonna,Kataragama<br>55060</p>
-  </font>              <img src="C:\Users\g.k.i.j.kapuge\Desktop\web poverty\No_Poverty_with_Digital_Enterpronurship\r.jpg">alt="map"height="350" width="350">
+  </font>              <img src="C:\Users\g.k.i.j.kapuge\Desktop\web poverty\No_Poverty_with_Digital_Enterpronurship\r.jpg"><alt="map"height="50" width="50">
 
 </div>
-                </div>
                 <div class="box">
                 <div class="icon"><p style="color:#A908B5"><i class="fas fa-phone-alt"></i></div>
                 <div class="text">
