i changed background image of general

--- a/general and digital/general and digital.html
+++ b/general and digital/general and digital.html
@@ -12,7 +12,7 @@
             padding: 0;
         }
         .background-image{
-            background-image: url(../img/Digital-03.jpg);
+            background-image: url(../img/speed-light-spotlights-digital-background_23-2148821702.jpg);
             background-size: cover;
             background-repeat: no-repeat;
             height: 100vh;
