added the content of general

--- a/general and digital/general and digital.html
+++ b/general and digital/general and digital.html
@@ -4,7 +4,12 @@
         <title>General and Digital</title>
     </head>
     <body>
-        <div class="background-image"></div>
+        <div class="background-image">
+            <div class="general">
+                <h1>General</h1>
+                <p>Our course work runs in two methods. So one is the general method. In this, you can attend physically for the coursework. You can get the experience of physical working. But the cost is a little bit of amount. You have to look after accommodation and food. So they will be a challenge for you.</p>
+            </div>
+        </div>
     </body>
     <style>
         *{
