arranged the content of general

--- a/general and digital/general and digital.html
+++ b/general and digital/general and digital.html
@@ -22,5 +22,14 @@
             background-repeat: no-repeat;
             height: 100vh;
         }
+        .general{
+            color: white;
+            text-align: center;
+            display: flex;
+            justify-content: center;
+            font-style: normal;
+            font-size: larger;
+            flex-direction: column;
+        }
     </style>
 </html>
