i added the content for digital

--- a/general and digital/general and digital.html
+++ b/general and digital/general and digital.html
@@ -8,6 +8,10 @@
             <div class="general">
                 <h1>General</h1>
                 <p>Our course work runs in two methods. So one is the general method. In this, you can attend physically for the coursework. You can get the experience of physical working. But the cost is a little bit of amount. You have to look after accommodation and food. So they will be a challenge for you.</p>
+            <div class="digital">
+                <h1>Digital</h1>
+                <p>Digital one is our second option of the coursework. In this, you can attend the coursework virtually. There is no need to find accommodation. So the cost is very low. Only you should have a proper internet connection. The disadvantage of this is you can't get a physical working experience. So you are only limited to a cage online work.</p>
+            </div>
             </div>
         </div>
     </body>
