--- a/gallery.html
+++ b/gallery.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Gallery Page</title>
+	<link rel="stylesheet" href="gallerystyle.css">
 </head>
 <body>
-<center><h1><b><p style="color:#0080ff">PREVIOUS ACTIVITIES DONE BY OUR ORGANIZTION</b></center></h1>
+<center><h1><b><p style="color:#ffffff">PREVIOUS ACTIVITIES DONE BY OUR ORGANIZTION</b></center></h1>
 	<hr>
-<img src="logo.png"alt="logo" height "150" width="150"style="float:center;">
+	<center><img src="logo.png"alt="logo" height "200" width="200"style="float:center;"></center>
 <br>
-<h2><u><p style="color:#1f3c7a">Leadership Trainee programs </u></h2>
+<center><h2><u><p style="color:#ffffff">Leadership Trainee programs </u></h2></center>
+	<div  class="box "><img style="width: 250px; height: 400px;" src="01.jpeg">
+		<img style="width: 250px; height: 400px;" src="02.jpeg">
+		<img style="width: 250px; height: 400px;" src="03.jpeg">
+		<img style="width: 250px; height: 400px;" src="04.jpeg">
+		<img style="width: 250px; height: 400px;" src="05.jpeg">
+		<img style="width: 250px; height: 400px;" src="06.jpeg">
+
+	</div>
+
+
 
 </body>
 </html>
