--- a/Forgot password page.html
+++ b/Forgot password page.html
@@ -3,24 +3,33 @@
 	<link rel="stylesheet" href="Forgot password  page.css" type="text/css">
 </head>
 <body>
+<form>
 <div class="main">
 <div class="Fp">
 	<h2>Frogot your password</h2>
 	<br>
 	<br>
-	<p>Please  enter the email addrress you'd like your passwrd reset information sent to</p>
 	<br>
 	<br>
-	<label>Email</label>
+	<label>Enter your user name </label>
 	<br>
-	<input type="email" name="email" id="name" placeholder="Enter Your Valid email">
-	<br><br>
+	<input type="name" name="name" id="name" placeholder="Enter Your user name">
 	<br>
-	<input type="submit" value="Request reset link" name="submit" id="submit">
 	<br>
-
-
-	</form>
-
+	<label>Create new password </label>
+	<br>
+	<input type="password" name="name" id="name" placeholder="Create New password">
+	<br>
+	<br>
+	<label>Re-Enter new  password  </label>
+	<br>
+	<input type="password" name="password" id="name" placeholder="Re-Enter new password">
+	<br>
+	<br>
+	<br>
+	<input type="submit" value="Creat" name="submit" id="submit">
+	<br>
+	<input type="submit" value="clear" name="submit" id="submit">
+</form>
 </body>
 </html>	
